{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 130,
  "lineage": "85037798-baf6-2a5f-1fc1-0119cdc91678",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_natgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063a081171a2f85be",
            "association_id": "eipassoc-01f593527577dcf17",
            "domain": "vpc",
            "id": "eipalloc-063a081171a2f85be",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05e0153cdb2fe7056",
            "private_dns": "ip-10-0-53-62.ec2.internal",
            "private_ip": "10.0.53.62",
            "public_dns": "ec2-35-168-69-240.compute-1.amazonaws.com",
            "public_ip": "35.168.69.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP for Nat Gateway"
            },
            "tags_all": {
              "Name": "Elastic IP for Nat Gateway"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:internet-gateway/igw-05cca9b9c3e6f884e",
            "id": "igw-05cca9b9c3e6f884e",
            "owner_id": "629760017811",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0477849e418875ad1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063a081171a2f85be",
            "connectivity_type": "public",
            "id": "nat-0d6dfee4fad1c3518",
            "network_interface_id": "eni-05e0153cdb2fe7056",
            "private_ip": "10.0.53.62",
            "public_ip": "35.168.69.240",
            "subnet_id": "subnet-05bee3d7215b5682b",
            "tags": {
              "Name": "Nat Gateway"
            },
            "tags_all": {
              "Name": "Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip_natgateway",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:route-table/rtb-040a8dd98e5299836",
            "id": "rtb-040a8dd98e5299836",
            "owner_id": "629760017811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d6dfee4fad1c3518",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0477849e418875ad1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_natgateway",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:route-table/rtb-0aa66cb6ab3595ec5",
            "id": "rtb-0aa66cb6ab3595ec5",
            "owner_id": "629760017811",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05cca9b9c3e6f884e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0477849e418875ad1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053e941467a035ec9",
            "route_table_id": "rtb-040a8dd98e5299836",
            "subnet_id": "subnet-0641db80055dd2997"
          },
          "dependencies": [
            "aws_eip.eip_natgateway",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_subnets_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056b0b9b24abf64de",
            "route_table_id": "rtb-040a8dd98e5299836",
            "subnet_id": "subnet-09b793bdb0fd41e7b"
          },
          "dependencies": [
            "aws_eip.eip_natgateway",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_subnets_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6825814956627d4",
            "route_table_id": "rtb-0aa66cb6ab3595ec5",
            "subnet_id": "subnet-05bee3d7215b5682b"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_subnets_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e882a5b9e4c51c1c",
            "route_table_id": "rtb-0aa66cb6ab3595ec5",
            "subnet_id": "subnet-0f1522cf3450b6aaf"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_subnets_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:subnet/subnet-0641db80055dd2997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0641db80055dd2997",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629760017811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet / us-east-1a",
              "Subnet": "Private Subnet us-east-1a-1",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "Private Subnet / us-east-1a",
              "Subnet": "Private Subnet us-east-1a-1",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0477849e418875ad1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:subnet/subnet-09b793bdb0fd41e7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b793bdb0fd41e7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629760017811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet / us-east-1b",
              "Subnet": "Private Subnet us-east-1b-2",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "Private Subnet / us-east-1b",
              "Subnet": "Private Subnet us-east-1b-2",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0477849e418875ad1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:subnet/subnet-05bee3d7215b5682b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bee3d7215b5682b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629760017811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet / us-east-1a",
              "Subnet": "us-east-1a-3",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Public Subnet / us-east-1a",
              "Subnet": "us-east-1a-3",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0477849e418875ad1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:subnet/subnet-0f1522cf3450b6aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1522cf3450b6aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "629760017811",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet / us-east-1b",
              "Subnet": "us-east-1b-4",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "Public Subnet / us-east-1b",
              "Subnet": "us-east-1b-4",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0477849e418875ad1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629760017811:vpc/vpc-0477849e418875ad1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09598a7dc6e7775dc",
            "default_route_table_id": "rtb-031df5ec7eab4016a",
            "default_security_group_id": "sg-000605da8f960ce03",
            "dhcp_options_id": "dopt-fd4fc187",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0477849e418875ad1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031df5ec7eab4016a",
            "owner_id": "629760017811",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}